--- a/templates/profile_stats.html
+++ b/templates/profile_stats.html
@@ -519,7 +519,7 @@
                                     <div class="streak-item">
                                         <div class="streak-label">Worst Loss Streak</div>
                                         <div class="streak-value text-info">
-                                            <i class="fas fa-snowflake me-1"></i> {{ abs(player_data.longest_loss_streak or 0) }}
+                                            <i class="fas fa-snowflake me-1"></i> {{ (player_data.longest_loss_streak or 0) * -1 if (player_data.longest_loss_streak or 0) < 0 else (player_data.longest_loss_streak or 0) }}
                                         </div>
                                     </div>
                                 </div>
