update to website

--- a/templates/profile_stats.html
+++ b/templates/profile_stats.html
@@ -1125,3 +1125,4 @@ console.log('Chart data:', chartData);
 console.log('Has ranked stats:', chartData.ranked.length > 0);
 console.log('Has global stats:', chartData.global.length > 0);
 </script>
+{% endblock %}
